examples/test/testpolicy5706.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5706
  namespace: namespace343
spec:
  podSelector:
    matchLabels:
      key25: value4
      key46: value26
      key23: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value13
      podSelector:
        matchLabels:
          key6: value45
